--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -14,3 +14,31 @@ main>.container {
 code {
     font-size: 80%;
 }
+
+.nav-name {
+    font-weight: 1000;
+    font-size: 28px;
+    color: #f5f5f5;
+}
+
+.card-body {
+    background-color: gray;
+}
+
+#searched {
+    display: block;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+    margin-top: 30px;
+    width: 15%;
+}
+
+.date-of {
+    font-weight: 700;
+    text-align: center;
+}
+
+.humidity {
+    font-weight: 500;
+    text-align: center;
+}
