--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -42,3 +42,77 @@ code {
     font-weight: 500;
     text-align: center;
 }
+
+.wind {
+    font-weight: 500;
+    text-align: center;
+}
+
+.iconexp {
+    font-weight: 500;
+    text-align: center;
+}
+
+.lead {
+    font-weight: 500;
+    text-align: center;
+}
+
+.actual-date {
+    font-weight: 1000;
+    text-align: center;
+}
+
+.exp-city {
+    font-weight: 1000;
+    text-align: center;
+}
+
+#issues {
+    display: none;
+}
+
+.cities {
+    color: #555555;
+    cursor: pointer;
+    font-size: 18px;
+    padding: 5px;
+    text-align: center;
+    width: auto;
+}
+
+.whole {
+    background-color: #1a2938;
+    color: aliceblue;
+    font-weight: 700;
+    margin-top: 25px;
+    margin-right: 10px;
+    margin-left: 10px;
+    padding-right: 10px;
+    text-align: center;
+    border: 2px #343a40;
+    border-radius: 25px;
+}
+
+.jumbotron-back {
+    background-color: rgb(113, 132, 160);
+}
+
+.uvdesign {
+    margin: auto;
+    text-align: center;
+    width: 200px;
+    border-radius: 25px;
+}
+
+.great {
+    background-color: green;
+}
+
+.mid {
+    background-color: yellow;
+}
+
+.high {
+    background-color: plum;
+}
